fix: list spacing

--- a/frontend/src/pages/ListaSolicitacoes/ListaSolicitacoesMobile/ListaSolicitacoesMobile.module.scss
+++ b/frontend/src/pages/ListaSolicitacoes/ListaSolicitacoesMobile/ListaSolicitacoesMobile.module.scss
@@ -32,7 +32,7 @@
   margin: 12px auto;
   width: calc(100% - 10px);
   gap: 12px;
-  height: calc(77vh );
+  height: calc(100vh - 220px);
 //   border: 1px solid green;
 }
 
@@ -80,11 +80,9 @@
 }
 
 .listContainer {
+  box-sizing: border-box;
   display: flex;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 10px;
   flex-direction: column;
   gap: 5px;
   box-sizing: border-box;
@@ -93,7 +91,7 @@
   border-radius: 12px;
   background-color: $black-40;
   backdrop-filter: $blur;
-  overflow: auto;
+  // overflow: auto;
   //  border: 1px solid red;
   }
 
@@ -101,7 +99,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   flex: 1;
   border-radius: 12px;
   background-color: transparent;
@@ -110,11 +108,10 @@
 }
 
 .esquerda {
-  flex: 3;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  
+  // gap: 12px;
 }
 
 .direita {
